# Sparse-Kernels

./: .gitignore  README.md  generator.h
dataset/: Makefile  main  matrix.cu  matrix.h  properties.h  random.h  test.cu
evaluation/: Makefile  matrix.cu  properties.h
kernels/: CMakeLists.txt
kernels/SpMM/: .clang-format  Makefile  SpMM.cu  SpMM.h  test_SpMM.cpp
kernels/cmake/: Dependencies.cmake
kernels/sparsekernel/: CMakeLists.txt  barrier.h  common.h  cuda_utils.h  load_store.h  matrix_utils.cu.cc  matrix_utils.h  memory_aligner.h  test_utils.h  tiling_utils.h  type_utils.h  vector_utils.h
kernels/sparsekernel/sddmm/: CMakeLists.txt  all_reduce.h  compute_utils.h  cuda_sddmm.cu.cc  cuda_sddmm.h  dense_to_reg.h  dense_to_shared.h  output_tile.h  sddmm_benchmark.cu.cc
kernels/sparsekernel/spmm/: CMakeLists.txt  compute_utils.h  cuda_spmm.cu.cc  cuda_spmm.h  dense_tile.h  output_tile.h  predicate_utils.h  sparse_tile.h  spmm_benchmark.cu.cc  spmm_config.h
